<resources>
    <string name="app_name">信用管家</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_message">我的消息</string>
    <string name="share_promotion_text">分享推广</string>
    <string name="second_share_way">2.你也可以通过以下方式分享给朋友：</string>
    <string name="we_chat_text">微信</string>
    <string name="first_share_way">1.让朋友用手机扫描下面的二维码即可安装：</string>
    <string name="qq_text">QQ</string>
    <string name="friend_circle_text">朋友圈</string>
    <string name="qq_zone_text">QQ空间</string>
    <string name="wei_bo_text">微博</string>
    <string name="cancel_text">取消</string>
    <string name="proxy_grade_text">代理级别</string>
    <string name="price_text">价格</string>
    <string name="price_value">￥%s</string>
    <string name="read_agreed_text">我已阅读并同意</string>
    <string name="user_protcol_text">《用户协议》</string>
    <string name="buy_now_text">立即购买</string>
    <string name="pay_method_text">支付方式</string>
    <string name="order_payment_text">订单金额</string>
    <string name="pay_by_ali_text">支付宝支付</string>
    <string name="pay_by_ali_quickly">支付宝快速购买</string>
    <string name="pay_by_we_chat">微信支付</string>
    <string name="pay_by_we_chat_quickly">微信第三方快速支付</string>
    <string name="money_mark">￥%s</string>
    <string name="withdraw_mark">-%s</string>
    <string name="withdraw_cost_text">第三方手续费用百分比：%s</string>
    <string name="rank_info_text">%s排行(前十名)</string>
    <string name="pay_by_balance">余额支付</string>
    <string name="pay_by_account_balance">账户余额支付</string>
    <string name="state_text">状态:</string>
    <string name="detail_text">详情</string>
    <string name="account_no_text">账户：%s</string>
    <string name="name_text">姓名：%s</string>
    <string name="commission_text">佣金：</string>
    <string name="plus_mark">+%s</string>
    <string name="credit_info_text">征信详情</string>
    <string name="pay_now">立即支付</string>
    <string name="click_to_view">点击查看</string>
    <string name="proxy_type_text">您好，%s</string>
    <string name="pay_diff">(补差价可升级为高级会员)</string>
</resources>
