<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_member_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/proxy_type_text"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_buy_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#fff"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/pay_diff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_buy_proxy"
        android:orientation="vertical">
        <View style="@style/SplitLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:paddingEnd="14dp"
            android:paddingStart="14dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/proxy_grade_text"
                android:textColor="@color/colorDarkGray"
                android:textSize="14sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_proxy_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <View style="@style/SplitLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:paddingEnd="14dp"
            android:paddingStart="14dp">

            <TextView
                android:id="@+id/tv_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_text"
                android:textColor="@color/colorDarkGray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_proxy_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/price_value"
                android:textColor="@color/colorOrange"
                android:textSize="18sp" />

        </LinearLayout>

        <View style="@style/SplitLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/sw_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:checked="true"
                android:thumb="@drawable/thumb"
                android:track="@drawable/track" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/read_agreed_text" />

            <TextView
                android:id="@+id/tv_user_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/user_protcol_text"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_buy"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_btn_login"
            android:text="@string/buy_now_text"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>

