<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="@dimen/status_bar_size">

        <ImageView
            android:layout_width="@dimen/toolbar_size"
            android:layout_height="@dimen/toolbar_size"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="finishPage"
            android:scaleType="center"
            android:src="@drawable/ic_back_black"
            android:tint="@android:color/white"
            tools:ignore="ContentDescription,OnClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbar_size"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/pay_method_text"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_payment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/order_payment_text"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="2dp"
        android:gravity="end"
        android:text="￥0.00"
        android:textColor="@color/colorOrange"
        android:textSize="26sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:visibility="gone"
        android:background="#eaeaea" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/rl_pay_by_ali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_pay1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:src="@drawable/ic_alipay"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_ali"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_by_ali_text"
                android:textColor="@color/colorDarkGray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/pay_by_ali_quickly"
                android:textColor="@color/colorLightGray"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_ali_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/selector_pay_mode"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:visibility="gone"
        android:background="#eaeaea" />

    <LinearLayout
        android:id="@+id/rl_pay_by_wx"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_pay2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="8dp"
            android:src="@drawable/ic_wechat_pay"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_weichat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_by_we_chat"
                android:textColor="@color/colorDarkGray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/pay_by_we_chat_quickly"
                android:textColor="@color/colorLightGray"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_wx_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/selector_pay_mode"
            tools:ignore="ContentDescription" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:visibility="visible"
        android:background="#eaeaea" />

    <LinearLayout
        android:id="@+id/rl_pay_by_changjie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_pay5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="8dp"
            android:src="@mipmap/ic_changjie"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_changjie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="畅捷支付"
                android:textColor="@color/colorDarkGray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="使用畅捷支付购买"
                android:textColor="@color/colorLightGray"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_cj_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/selector_pay_mode"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#eaeaea" />


    <LinearLayout
        android:id="@+id/rl_pay_by_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_pay3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="7dp"
            android:src="@drawable/ic_wallet"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_by_balance"
                android:textColor="@color/colorDarkGray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/pay_by_account_balance"
                android:textColor="@color/colorLightGray"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_balance_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/selector_pay_mode"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_pay"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_btn_login"
        android:text="@string/pay_now"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</LinearLayout>