<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingEnd="14dp"
        android:paddingStart="14dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/iv_head_img"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/tv_account_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text"
                android:textColor="@color/colorDarkGray"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="[未开通]"
                android:textColor="@color/colorPrimary"
                android:textSize="10sp"
                android:visibility="gone" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:background="#ddd" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/colorLightGray"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/commission_text"
                        android:textColor="@color/colorLightGray"
                        android:textSize="10sp" />

                    <TextView
                        android:text="@string/plus_mark"
                        android:id="@+id/tv_commission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <View style="@style/SplitLine" />
</LinearLayout>